# TexturePacker

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
ext/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
include/: app.hpp  collision_utils.hpp  display_image.hpp  display_texture.hpp  file_dialogue.hpp  image.hpp  input.hpp  matrix_debug.hpp  read_file_utils.hpp  renderer.hpp  shader_loading.hpp  texture.hpp  texture_creation.hpp  window.hpp
include/shaders/: shader.hpp  shader_program.hpp
resources/shaders/: debug_fragment.glsl  debug_vertex.glsl  fragment.glsl  vertex.glsl
src/: Input.cpp  app.cpp  display_image.cpp  display_texture.cpp  image.cpp  main.cpp  renderer.cpp  shader_program.cpp  texture.cpp  window.cpp
src/shaders/: shader.cpp  shader_program.cpp
